Html/Css updated

--- a/src/app/components/pages/dashboard/dashboard.component.html
+++ b/src/app/components/pages/dashboard/dashboard.component.html
@@ -5,17 +5,17 @@
       <ul class="users list-inline">
         <li class="list-inline-item">
           <a href="#">
-            <img src="../../../../assets/images/user1.png" alt="user1">
+            <img src="assets/images/user1.png" alt="user1">
           </a>
         </li>
         <li class="list-inline-item">
           <a href="#">
-            <img src="../../../../assets/images/user2.png" alt="user2">
+            <img src="assets/images/user2.png" alt="user2">
           </a>
         </li>
         <li class="list-inline-item">
           <a href="#">
-            <img src="../../../../assets/images/user3.png" alt="user3">
+            <img src="assets/images/user3.png" alt="user3">
           </a>
         </li>
         <li class="list-inline-item">
