Major update Dropdown Component Added Login Implemented JWT Implemented Signout Implemented HTML update

--- a/src/app/components/layouts/public-base/public-base.component.html
+++ b/src/app/components/layouts/public-base/public-base.component.html
@@ -1,4 +1,4 @@
-<header class="bg-dark">
+<!-- <header class="bg-dark">
   <div class="container">
     <nav class="navbar navbar-expand-md navbar-dark pl-0">
       <a class="navbar-brand logo" href="#"></a>
@@ -6,7 +6,6 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse">
-        <!-- show -->
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Login
@@ -24,6 +23,36 @@
         </ul>
       </div>
     </nav>
+  </div>
+</header> -->
+
+<header class="masthead">
+  <div class="boards-menu">&nbsp;</div>
+
+  <div class="logo">
+    <a [routerLink]="['/']">
+      <i class="fab fa-trello logo-icon" aria-hidden="true"></i>
+    </a>
+  </div>
+
+  <div class="user-settings">
+    <div class="navbar-collapse">
+      <!-- <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Login
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">About us</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+      </ul> -->
+    </div>
   </div>
 </header>
 <tm-linear-loader></tm-linear-loader>
