--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid dark-bg">
+<div class="container-fluid">
   <div class="container py-5">
     <div class="row">
       <div class="col-sm col-12">
@@ -23,7 +23,10 @@
         <div class="card">
           <div class="card-body text-dark">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
             <small>
               <a href="#">Learn more</a>
             </small>
@@ -35,7 +38,10 @@
         <div class="card">
           <div class="card-body text-dark">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
             <small>
               <a href="#">Learn more</a>
             </small>
@@ -47,7 +53,10 @@
         <div class="card">
           <div class="card-body text-dark">
             <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
             <small>
               <a href="#">Learn more</a>
             </small>
