--- a/src/app/components/layouts/private-base/private-base.component.html
+++ b/src/app/components/layouts/private-base/private-base.component.html
@@ -1,4 +1,4 @@
-<header class="bg-dark">
+<!-- <header class="bg-dark">
   <div class="container-fluid">
     <div class="row pt-2">
       <div class="col-12 col-md-3">
@@ -21,6 +21,48 @@
       </div>
     </div>
 
+  </div>
+</header> -->
+
+<header class="masthead">
+  <div class="boards-menu">
+    <button class="boards-btn butn">
+      <i class="fab fa-trello boards-btn-icon"></i>Boards
+    </button>
+
+    <div class="board-search">
+      <input
+        type="search"
+        class="board-search-input"
+        aria-label="Board Search"
+      />
+      <i class="fas fa-search search-icon" aria-hidden="true"></i>
+    </div>
+  </div>
+
+  <div class="logo">
+    <a [routerLink]="['/']">
+      <i class="fab fa-trello logo-icon" aria-hidden="true"></i>
+    </a>
+  </div>
+
+  <div class="user-settings">
+    <button class="user-settings-btn butn" aria-label="Create">
+      <i class="fas fa-plus" aria-hidden="true"></i>
+    </button>
+
+    <button class="user-settings-btn butn" aria-label="Notifications">
+      <i class="fas fa-bell" aria-hidden="true"></i>
+    </button>
+
+    <button class="user-settings-btn butn" aria-label="User Settings" (click)="toggleUserTip()">
+      <i class="fas fa-user-circle" aria-hidden="true"></i>      
+    </button>
+
+    <button class="user-settings-btn butn" aria-label="Sign out" (click)="signout()">
+      <!-- <i class="fas fa-info-circle" aria-hidden="true"></i> -->
+      <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
+    </button>
   </div>
 </header>
 
