--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -2,25 +2,58 @@
   <div class="form-group">
     <label for="name">Name</label>
     <input type="text" class="form-control" id="name" placeholder="Enter Name" formControlName="name">
+    <tm-error-message [control]="registrationForm.get('name')"></tm-error-message>
   </div>
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="text" class="form-control" id="email" placeholder="Enter email" formControlName="email">
+    <tm-error-message [control]="registrationForm.get('email')"></tm-error-message>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password">
-  </div>
-  <div class="form-group">
-    <label for="repassword">Confirm Password</label>
-    <input type="password" class="form-control" id="repassword" placeholder="Confirm Password" formControlName="repassword">
-  </div>
+  <ng-container formGroupName="pwd">
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password">
+      <tm-error-message [control]="registrationForm.get('pwd').get('password')"></tm-error-message>
+    </div>
+    <div class="form-group">
+      <label for="repassword">Confirm Password</label>
+      <input type="password" class="form-control" id="repassword" placeholder="Confirm Password" formControlName="repassword">
+      <tm-error-message [group]="registrationForm.get('pwd')"></tm-error-message>
+    </div>
+  </ng-container>
   <div class="form-group">
     <label for="phone">Phone Number</label>
     <input type="text" class="form-control" id="phone" placeholder="Phone number" formControlName="phone">
   </div>
   <div class="form-group">
     <label for="dob">Date of Birth</label>
+    <div class="row" formGroupName="dob">
+        <div class="col-4">
+          <tm-dropdown 
+            [data]="days" 
+            [defaultSelection]="{id: '', text:'Day'}"
+            [formGroupInstance]="registrationForm.get('dob')" 
+            [controlName]="'day'"
+          ></tm-dropdown>
+        </div>
+        <div class="col-4">
+          <tm-dropdown 
+            [data]="months" 
+            [defaultSelection]="{id: '', text:'Month'}"
+            [formGroupInstance]="registrationForm.get('dob')" 
+            [controlName]="'month'"
+          ></tm-dropdown>
+        </div>
+        <div class="col-4">
+          <tm-dropdown 
+            [data]="years" 
+            [defaultSelection]="{id: '', text:'Year'}"
+            [formGroupInstance]="registrationForm.get('dob')" 
+            [controlName]="'year'"
+          ></tm-dropdown>
+        </div>
+        <tm-error-message [group]="registrationForm.get('dob')"></tm-error-message>
+    </div>
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="staySigned">
