--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,64 +1,141 @@
 @import "var";
 @import "mixin";
 
+
+:root {
+    font-size: 10px;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
-    margin: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    background-color: #0079bf;
+}
+
+.butn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font: inherit;
+    background: none;
+    border: none;
+    color: inherit;
     padding: 0;
+    cursor: pointer;
 }
 
-button {
-    @include gradient(top, #007bff, #207cca, #7db9e8);
+:focus {
+    outline-color: #fa0;
 }
 
-button:hover {    
-    @include gradient(top, #1e5799, #207cca, #7db9e8);
+.masthead {
+    flex-basis: 4rem;
+    display: flex;
+    align-items: center;
+    padding: 0 0.8rem;
+    background-color: #0067a3;
+    box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1);
+    margin: 5px;
+    padding: 5px;
+}
+
+.masthead .butn {
+    background-color: #4c94be;
+    border-radius: 0.3rem;
+    transition: background-color 150ms;
+}
+
+.masthead .butn:hover {
+    background-color: #3385b5;
+}
+
+.boards-menu {
+    display: flex;
+    flex-shrink: 0;
+}
+
+.boards-btn {
+    flex-basis: 9rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #fff;
+    margin-right: 0.8rem;
+    // padding: 0.6rem 0.8rem;
+}
+
+.boards-btn-icon {
+    font-size: 1.7rem;
+    padding-right: 1.2rem;
+}
+
+.board-search {
+    flex-basis: 18rem;
+    position: relative;
+}
+
+.board-search-input {
+    height: 3rem;
+    border: none;
+    border-radius: 0.3rem;
+    background-color: #4c94be;
+    width: 100%;
+    padding: 0 3rem 0 1rem;
+    color: #fff;
+}
+
+.board-search-input:hover {
+    background-color: #66a4c8;
+}
+
+.search-icon {
+    font-size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    right: 0.8rem;
+    transform: translateY(-50%) rotate(90deg);
+    color: #fff;
 }
 
 .logo {
-    background-image: url($imagePath + "logo.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 128px;
-    height: 54px;
-    margin: 0;
-    padding: 0;
+    flex: 1;
+    font-family: "Courgette", cursive;
+    font-size: 2.2rem;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 0 2rem;
+    transition: color 150ms;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
 }
 
-a {
-    &:hover {
-        text-decoration: none;
-    }
+.logo:hover {
+    color: rgba(255, 255, 255, 0.8);
 }
 
-.dark-bg {
-    background-color: #2b3137;
-    color: #FFF;
+.logo-icon {
+    padding-right: 0.4rem;
 }
 
-.bg-white {
-    background-color: #FFF;
-    color: #000;
-    @include border-radius(10);
+.user-settings {
+    display: flex;
+    height: 3rem;
+    color: #fff;
 }
 
-.text-18 {
-    font-size: 18px;
+.user-settings-btn {
+    font-size: 1.5rem;
+    width: 3rem;
+    margin-right: 0.8rem;
 }
 
-.button-image {
-    &:before {
-        content: "";
-        width: 20px;
-        height: 20px;
-        display: inline-block;
-        vertical-align: text-top;
-        background-color: transparent;
-        background-position : center center;
-        background-repeat: no-repeat;
-        background-size: 100%;
-    }
-    span {
-        font-size: 15px;
-        margin-left: 5px;
-    }
+.user-settings-btn:last-of-type {
+    margin-right: 0;
 }
