--- a/src/app/components/pages/dashboard/dashboard.component.scss
+++ b/src/app/components/pages/dashboard/dashboard.component.scss
@@ -1,350 +1,3 @@
-@import "var";
-@import "mixin";
+// @import "var";
+// @import "mixin";
 
-// main {
-//     padding: 0;
-//     margin: 0;
-//     color: #343a40;
-
-//     .project-header {
-//         margin: 10px 0;
-//         .title {
-//             display: inline-block;
-//             font-size: 1.5rem;
-//             font-weight: bold;
-//             margin-right: 20px;
-//         }
-//         ul.users {
-//             list-style-type: none;
-//             display: inline-block;
-//             border-right: none;
-//             margin-right: 20px;
-//             li {
-//                 border: 1px solid #343a40;
-//                 padding: 0 5px;
-//                 @include border-radius(5);
-//                 &:last-child {
-//                     padding: 4px 5px;
-//                 }
-//             }
-//         }
-//         .add-us {
-//             display: inline-block;
-//             .add-user-story {
-//                 &:before {
-//                     background-image: url($imagePath + 'plus.png');
-//                 }
-//             }
-//         }
-//         .more {
-//             @include bg-image();
-//             background-image: url($imagePath + 'more.png');
-//             cursor: pointer;
-//             &:after {
-//                 content: '';
-//                 padding: 5px 0;
-//             }
-//         }
-//     }
-
-//     .project {
-//         .user-stories {
-//             list-style-type: none;
-//             margin: 0;
-//             padding: 0;
-//             display: flex;
-//             li.user-story {
-//                 @include border-radius(10);
-//                 background-color: $default-bg;
-//                 width: 300px;
-//                 display: inline-block;
-//                 flex-grow: 1;
-//                 margin: 0 15 + $px;
-//                 padding: 15 + $px 5 + $px;
-
-//                 .us-title {
-//                     color: #FFF;
-//                     font-size: 1rem;
-//                     font-weight: 600;
-//                     &:after {
-//                         @include bg-image();
-//                         content: '';
-//                         width: 30px;
-//                         height: 30px;
-//                         background-image: url($imagePath + 'edit.png');
-//                         float: right;
-//                         cursor: pointer;
-//                     }
-//                     span {
-//                         font-size: 1.3rem;
-//                     }
-//                     input.title {
-//                         width: 90%;
-//                         border-radius: 10 + $px;
-//                         border: none;
-//                         padding: 5 + $px;
-//                         color: #343a40;
-//                     }
-//                 }
-
-//                 ul.tasks {
-//                     list-style-type: none;
-//                     padding: 0;
-//                     margin: 0;
-
-//                     li.task {
-//                         @include border-radius(5);
-//                         width: 100%;
-//                         margin: 20 + $px 0;
-//                         padding: 5 + $px;
-//                         min-height: 40 + $px;
-//                         cursor: pointer;
-//                         &.empty {
-//                             color: #b1a2a2;
-//                             border: 2 + $px dotted #FFF;                            
-//                         }
-//                         &:not(.empty) {
-//                             @include box-shadow(0, 5);
-//                             background-color: #ece3e3;
-//                             color: #343a40;
-//                             padding-top: 8 + $px;
-//                         }
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
-
-.board-info-bar {
-    flex-basis: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0.8rem 0;
-    padding: 0 1rem;
-    color: #f6f6f6;
-}
-
-.board-controls {
-    display: flex;
-}
-
-.board-controls .btn {
-    margin-right: 1rem;
-}
-
-.board-controls .btn:last-of-type {
-    margin-right: 0;
-}
-
-.board-info-bar .btn {
-    font-size: 1.4rem;
-    font-weight: 400;
-    transition: background-color 150ms;
-    padding: 0 0.6rem;
-    border-radius: 0.3rem;
-    /* height: 3rem; */
-}
-
-.board-info-bar .btn:hover {
-    background-color: #006aa8;
-}
-
-.private-btn-icon,
-.menu-btn-icon {
-    padding-right: 0.6rem;
-    white-space: nowrap;
-}
-
-.board-title h2 {
-    font-size: 1.8rem;
-    font-weight: 700;
-    white-space: nowrap;
-}
-
-/* Lists */
-
-.lists-container::-webkit-scrollbar {
-    height: 2.4rem;
-}
-
-.lists-container::-webkit-scrollbar-thumb {
-    background-color: #66a3c7;
-    border: 0.8rem solid #0079bf;
-    border-top-width: 0;
-}
-
-.lists-container {
-    display: flex;
-    align-items: start;
-    padding: 0 0.8rem 0.8rem;
-    overflow-x: auto;
-    height: calc(100vh - 8.6rem);
-}
-
-.list {
-    flex: 0 0 27rem;
-    display: flex;
-    flex-direction: column;
-    background-color: #e2e4e6;
-    max-height: calc(100vh - 11.8rem);
-    border-radius: 0.3rem;
-    margin-right: 1rem;
-}
-
-.list:last-of-type {
-    margin-right: 0;
-}
-
-.list-title {
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #333;
-    padding: 1rem;
-}
-
-.list-items {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-content: start;
-    padding: 0 0.6rem 0.5rem;
-    overflow-y: auto;
-}
-
-.list-items::-webkit-scrollbar {
-    width: 1.6rem;
-}
-
-.list-items::-webkit-scrollbar-thumb {
-    background-color: #c4c9cc;
-    border-right: 0.6rem solid #e2e4e6;
-}
-
-.list-items li {
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.3;
-    background-color: #fff;
-    padding: 0.65rem 0.6rem;
-    color: #4d4d4d;
-    border-bottom: 0.1rem solid #ccc;
-    border-radius: 0.3rem;
-    margin-bottom: 0.6rem;
-    word-wrap: break-word;
-    cursor: pointer;
-}
-
-.list-items li:last-of-type {
-    margin-bottom: 0;
-}
-
-.list-items li:hover {
-    background-color: #eee;
-}
-
-.add-card-btn {
-    display: block;
-    font-size: 1.4rem;
-    font-weight: 400;
-    color: #838c91;
-    padding: 1rem;
-    text-align: left;
-    cursor: pointer;
-}
-
-.add-card-btn:hover {
-    background-color: #cdd2d4;
-    color: #4d4d4d;
-    text-decoration: underline;
-}
-
-.add-list-btn {
-    flex: 0 0 27rem;
-    display: block;
-    font-size: 1.4rem;
-    font-weight: 400;
-    background-color: #006aa7;
-    color: #a5cae0;
-    padding: 1rem;
-    border-radius: 0.3rem;
-    cursor: pointer;
-    transition: background-color 150ms;
-    text-align: left;
-}
-
-.add-list-btn:hover {
-    background-color: #005485;
-}
-
-.add-card-btn::after,
-.add-list-btn::after {
-    content: '...';
-}
-
-/*
-
-The following rule will only run if your browser supports CSS grid.
-
-Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling. 
-
-*/
-
-@supports (display: grid) {
-    body {
-        display: grid;
-        grid-template-rows: 4rem 3rem auto;
-        grid-row-gap: 0.8rem;
-    }
-
-    .masthead {
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        grid-column-gap: 2rem;
-    }
-
-    .boards-menu {
-        display: grid;
-        grid-template-columns: 9rem 18rem;
-        grid-column-gap: 0.8rem;
-    }
-
-    .user-settings {
-        display: grid;
-        grid-template-columns: repeat(4, auto);
-        grid-column-gap: 0.8rem;
-    }
-
-    .board-controls {
-        display: grid;
-        grid-auto-flow: column;
-        grid-column-gap: 1rem;
-    }
-
-    .lists-container {
-        display: grid;
-        grid-auto-columns: 27rem;
-        grid-auto-flow: column;
-        grid-column-gap: 1rem;
-    }
-
-    .list {
-        display: grid;
-        grid-template-rows: auto minmax(auto, 1fr) auto;
-    }
-
-    .list-items {
-        display: grid;
-        grid-row-gap: 0.6rem;
-    }
-
-    .logo,
-    .list,
-    .list-items li,
-    .boards-btn,
-    .board-controls .btn,
-    .user-settings-btn {
-        margin: 0;
-    }
-}
