--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -140,3 +140,8 @@ body {
 .user-settings-btn:last-of-type {
     margin-right: 0;
 }
+
+.form-control {
+    height: 3em;
+    padding: 0 0 0 2.5em;
+}
